--- a/src/styles.css
+++ b/src/styles.css
@@ -238,7 +238,7 @@ body {
 .t-head,
 .t-row {
   display: grid;
-  grid-template-columns: 70px 1fr 80px 110px 90px 100px 110px 140px;
+  grid-template-columns: 70px 200px  200px 80px 200px 90px 100px 110px 140px;
   gap: 8px;
   padding: 10px 12px;
   border-bottom: 1px solid var(--border);
